# fpf-reasoning-agent

./: .gitignore  First Principles Framework — Core Conceptual Specification (holonic).md  README.md  docker-compose.yml  pyproject.toml  run.sh
src/fpf_agent/: __init__.py  config.py  main.py
src/fpf_agent/core/: adi_cycle.py  aggregation.py  contexts.py  creativity.py  fgr.py  fpf_base_prompt.py  fpf_index.py  fpf_schemas.py  integration.py  reasoning.py  schemas.py  validator.py
src/fpf_agent/kernel/: __init__.py  bounded_context.py  holons.py  types.py
src/fpf_agent/persistence/: __init__.py  arango_schema.py  context_store.py  episteme_store.py  evidence_graph.py  migrations.py  session_store.py
src/fpf_agent/reasoning/: __init__.py  adi_executor.py  lifecycle.py
src/fpf_agent/reasoning/schemas/: __init__.py  abduction.py  deduction.py  induction.py  synthesis.py
src/fpf_agent/shell/: files.py  llm.py  storage.py
src/fpf_agent/trust/: __init__.py  calculus.py  fgr.py
tests/: __init__.py  test_adi_cycle.py  test_aggregation.py  test_creativity.py  test_fgr.py  test_integration.py  test_kernel.py  test_persistence.py  test_reasoning_schemas.py  test_trust.py  test_validator.py
